tests/coverage/misc/fail/early_errors/strict_mode/009_duplicate_params_strict_nested.js
function outer() {
    'use strict';
    function inner(a, a) {
        return a;
    }
}
